# axum_zero2prod

./: .env  .gitignore  Cargo.toml  configuration.yaml  justfile
migrations/: 20240623051458_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
