[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.1"
chrono = "0.4.38"
config = "0.14.0"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
